# atc-livesession-examples

./: .gitignore
2024-11-23-myStore-cli-app/: demo.cabal  demo.cabal~
2024-11-23-myStore-cli-app/app/: Main.hs
2024-11-23-myStore-cli-app/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2024-11-30-dbserialization/: README.md  dbserialization.cabal
2024-11-30-dbserialization/app/: API.hs  Product.hs  Shop.hs  TypeClasses.hs
2024-12-14-obelisk-cryptos-app/: default.nix  ghcid-output.txt  result-android  static.out
2024-12-14-obelisk-cryptos-app/backend/: backend.cabal
2024-12-14-obelisk-cryptos-app/backend/src/: Backend.hs
2024-12-14-obelisk-cryptos-app/common/: common.cabal
2024-12-14-obelisk-cryptos-app/common/src/Common/: Route.hs  Types.hs
2024-12-14-obelisk-cryptos-app/frontend/src/: Frontend.hs
2025-01-04-recursive-tracing/: Main.hs  shell.nix
2025-02-08-docker-kubernetes/: Dockerfile  default.nix  my-ml-service.cabal  shell.nix
2025-02-08-docker-kubernetes/src/: Main.hs
2025-02-08-docker-kubernetes/terraform/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
2025-02-22-distributed-montecarlo/: DistributedMonteCarlo.cabal  Dockerfile
2025-02-22-distributed-montecarlo/kubernetes/: debug-pod.yaml  deployment.yaml
2025-02-22-distributed-montecarlo/src/: DistributedMonteCarlo.hs  Main.hs
2025-02-22-distributed-montecarlo/terraform/: .terraform.lock.hcl  .terraform.tfstate.lock.info  main.tf
2025-03-08-webscraping/: CHANGELOG.md  scrape.cabal  shell.nix  test.html
2025-03-08-webscraping/app/: Main.hs
2025-03-15-domain-modelling/: Animal.hs  Main.hs
2025-05-03-state-monad/: BankAccount.hs  Main.hs  Parser.hs  StackCalculator.hs  StateVsST.hs
2025-05-09-statet-monad-transformer/: Adventure2.hs  Bank.hs  Logger.hs  Main.hs
2025-05-23-haskell-basics/: Beginner.hs
2025-05-31-compilation-vs-interpretation/hs/: hs.cabal
2025-05-31-compilation-vs-interpretation/hs/app/: Main.hs
2025-05-31-compilation-vs-interpretation/hs/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2025-05-31-compilation-vs-interpretation/py/: main.py
2025-06-14-pokedex/: static.out
2025-06-14-pokedex/backend/: backend.cabal
2025-06-14-pokedex/backend/src/: Backend.hs
2025-06-14-pokedex/common/: common.cabal
2025-06-14-pokedex/common/src/Common/: Pokemon.hs  Route.hs  Types.hs
2025-06-14-pokedex/frontend/: frontend.cabal
2025-06-14-pokedex/frontend/src/: Frontend.hs  Utils.hs
2025-06-14-pokedex/static/: main.css
2025-07-12-pong/: CHANGELOG.md  LICENSE  README.md  pingpong.cabal  shell.nix  shell2.nix
2025-07-12-pong/app/: Ball.hs  Helpers.hs  Main.hs  Paddle.hs  Rendering.hs  Shaders.hs  Types.hs  Window.hs
dbserialization/: .gitignore  shell.nix
dbserialization/app/: Database.hs  Main.hs
dbserialization/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dbserialization/pgdata/: postgresql.conf  postmaster.opts  postmaster.pid
dbserialization/pgdata/base/1/: 2619  pg_internal.init
dbserialization/pgdata/base/16436/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13440  13440_fsm  13440_vm  13445  13445_fsm  13445_vm  13449  13450  13450_fsm  13450_vm  13454  13455  13455_fsm  13455_vm  13459  16437  16438  16443  16444  16446  16447  16452  16453  16455  16457  174  (+211 more)
dbserialization/pgdata/base/5/: 13445  2619  pg_internal.init
dbserialization/pgdata/global/: 1214  1232  1233  1260  1262  2396  2671  2672  2676  2677  pg_control  pg_internal.init
