cabal-version:      3.0
name:               my-ml-service
version:            0.1.0.0
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple
extra-source-files: README.md

executable my-ml-service
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base
                  , stm
                  , http-conduit
                  , http-client
                  , http-types
                  , warp
                  , wai
                  , matrix
                  , bytestring
  default-language: Haskell2010
