cabal-version:      3.0
name:               DistributedMontoCarlo
version:            0.1.0.0
build-type:         Simple

executable DistributedMonteCarlo
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs

  build-depends:    base
                  , aeson
                  , bytestring
                  , http-client
                  , http-conduit
                  , http-types
                  , wai
                  , warp
                  , random
                  , transformers

  other-modules:
    DistributedMonteCarlo

  ghc-options: -threaded -rtsopts -with-rtsopts=-N
