cabal-version:      3.0
name:               pingpong
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kyle Jensen
maintainer:         kyle.jensen72@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable pingpong
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.17 && < 5
                    , vector
                    , bytestring
                    , time
                    , linear >= 1.19 && < 1.21
                    , text
                    , graphics-gpipe == 2.2.5
                    , GPipe-GLFW >= 1.6 && < 1.8

    hs-source-dirs:   app
    default-language: Haskell2010
