cabal-version:      3.0
name:               pingpong
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kyle Jensen
maintainer:         kyle.jensen72@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable pingpong
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , vector
                    , bytestring
                    , time
                    -- >= 1.19 && < 1.21
                    , linear
                    , text
                    , hashtables
                    -- , transformers
                    --  == 2.2.5
                    --, graphics-gpipe
                    -- >= 1.6 && < 1.8
                    , GPipe-GLFW

    hs-source-dirs:   app
    default-language: Haskell2010
