cabal-version:      3.0
name:               pingpong
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kyle Jensen
maintainer:         kyle.jensen72@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable pingpong
    import:           warnings
    main-is:          Main.hs

    other-modules:    Rendering
                    , Paddle
                    , Ball

    -- other-extensions:
    build-depends:    base
                    , vector
                    , bytestring
                    , time
                    , linear
                    , text
                    , hashtables
                    , GPipe
                    , GPipe-GLFW
                    , GLFW-b
                    , lens


    hs-source-dirs:   app
    default-language: Haskell2010
